<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/ic_assignment"
            android:title="@string/list_benchmark" />
        <item
            android:id="@+id/navigation_benchmark_wifi"
            android:icon="@drawable/ic_network_wifi"
            android:title="@string/wifi_benchmark" />

        <item
            android:id="@+id/navigation_benchmark_bluetooth_rfcomm"
            android:icon="@drawable/ic_bluetooth_connected"
            android:title="@string/bluetooth_rfcomm_benchmark" />
        <item
            android:id="@+id/navigation_benchmark_bluetooth_le"
            android:icon="@drawable/ic_bluetooth_searching"
            android:title="@string/bluetooth_le_benchmark" />
        <item
            android:id="@+id/navigation_benchmark_nfc"
            android:icon="@drawable/ic_nfc"
            android:title="@string/nfc_benchmark" />
        <item
            android:id="@+id/navigation_preferences"
            android:icon="@drawable/ic_settings"
            android:title="@string/preferences" />
        <item
            android:id="@+id/navigation_authentication"
            android:icon="@drawable/ic_action_eye_open"
            android:title="@string/authview" />
    </group>
</menu>